scm/build2.log
warning: unused import: `Processor`
 --> transport\main\src\api\traits\mod.rs:5:18
  |
5 | pub use traits::{Processor, Validator};
  |                  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: variant `Config` is never constructed
  --> transport\main\src\api\error\grpc_channel_config_error.rs:12:5
   |
 6 | pub enum GrpcChannelConfigError {
   |          ---------------------- variant in this enum
...
12 |     Config(String),
   |     ^^^^^^
   |
   = note: `GrpcChannelConfigError` has a derived impl for the trait `Debug`, but this is intentionally ignored during dead code analysis
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: trait `Validator` is never used
  --> transport\main\src\api\traits\traits.rs:14:11
   |
14 | pub trait Validator {
   |           ^^^^^^^^^

warning: trait `Processor` is never used
  --> transport\main\src\api\traits\processor\processor.rs:10:11
   |
10 | pub trait Processor: Send + Sync {
   |           ^^^^^^^^^

warning: struct `TransportSvc` is never constructed
 --> transport\main\src\api\types\transport_svc.rs:6:12
  |
6 | pub struct TransportSvc;
  |            ^^^^^^^^^^^^

warning: associated functions `create_config_builder`, `create_transport_from_config`, `create_tonic_client_from_config`, `validate_resilience_config`, and `create_lb_transport_from_config` are never used
  --> transport\main\src\saf\transport_svc.rs:40:12
   |
38 | impl TransportSvc {
   | ----------------- associated functions in this implementation
39 |     /// Create a config builder pre-populated with this crate's name and version.
40 |     pub fn create_config_builder() -> swe_edge_configbuilder::ConfigBuilderImpl {
   |            ^^^^^^^^^^^^^^^^^^^^^
...
48 |     pub fn create_transport_from_config(
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
57 |     pub fn create_tonic_client_from_config(
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
77 |     pub fn validate_resilience_config(config: &ResilienceConfig) -> Result<(), String> {
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^
...
90 |     pub fn create_lb_transport_from_config(
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: constant `DEFAULT_TIMEOUT` is never used
  --> transport\main\src\spi\loadbalancer\tonic\lb_grpc_client.rs:23:7
   |
23 | const DEFAULT_TIMEOUT: Duration = Duration::from_secs(30);
   |       ^^^^^^^^^^^^^^^

warning: struct `TonicLbGrpcClient` is never constructed
  --> transport\main\src\spi\loadbalancer\tonic\lb_grpc_client.rs:33:12
   |
33 | pub struct TonicLbGrpcClient {
   |            ^^^^^^^^^^^^^^^^^

warning: associated items `from_config`, `with_timeout`, and `timeout` are never used
  --> transport\main\src\spi\loadbalancer\tonic\lb_grpc_client.rs:47:12
   |
39 | impl TonicLbGrpcClient {
   | ---------------------- associated items in this implementation
...
47 |     pub fn from_config(config: LoadbalancerConfig) -> Result<Self, GrpcEgressError> {
   |            ^^^^^^^^^^^
...
80 |     pub fn with_timeout(mut self, timeout: Duration) -> Self {
   |            ^^^^^^^^^^^^
...
86 |     pub fn timeout(&self) -> Duration {
   |            ^^^^^^^

warning: `swe-edge-egress-grpc-transport` (lib) generated 9 warnings (run `cargo fix --lib -p swe-edge-egress-grpc-transport` to apply 1 suggestion)
   Compiling swe-edge-egress-grpc-breaker v0.5.0 (C:\phd-systems\swelabs\edge\egress\grpc\scm\breaker)
   Compiling swe-edge-egress-grpc-retry v0.5.0 (C:\phd-systems\swelabs\edge\egress\grpc\scm\retry)
warning: unused import: `grpc_auth_bearer_svc::GrpcAuthBearerSvc`
  --> auth-bearer\main\src\api\types\mod.rs:18:9
   |
18 | pub use grpc_auth_bearer_svc::GrpcAuthBearerSvc;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `swe-edge-egress-grpc-auth-bearer` (lib) generated 1 warning (run `cargo fix --lib -p swe-edge-egress-grpc-auth-bearer` to apply 1 suggestion)
error[E0252]: the name `GrpcRetryClient` is defined multiple times
  --> retry\main\src\saf\retry_svc.rs:14:29
   |
 5 | use crate::api::types::grpc_retry_client::GrpcRetryClient;
   |     ----------------------------------------------------- previous import of the type `GrpcRetryClient` here
...
14 | pub use crate::api::types::{GrpcRetryClient, GrpcRetrySvc};
   |                             ^^^^^^^^^^^^^^^--
   |                             |
   |                             `GrpcRetryClient` reimported here
   |                             help: remove unnecessary import
   |
   = note: `GrpcRetryClient` must be defined only once in the type namespace of this module

error[E0252]: the name `GrpcRetrySvc` is defined multiple times
  --> retry\main\src\saf\retry_svc.rs:14:46
   |
 7 | use crate::api::types::grpc_retry_svc::GrpcRetrySvc;
   |     ----------------------------------------------- previous import of the type `GrpcRetrySvc` here
...
14 | pub use crate::api::types::{GrpcRetryClient, GrpcRetrySvc};
   |                                              ^^^^^^^^^^^^ `GrpcRetrySvc` reimported here
   |
   = note: `GrpcRetrySvc` must be defined only once in the type namespace of this module

error[E0252]: the name `GrpcRetryConfig` is defined multiple times
  --> retry\main\src\saf\retry_svc.rs:11:22
   |
 6 | use crate::api::types::grpc_retry_config::GrpcRetryConfig;
   |     ----------------------------------------------------- previous import of the type `GrpcRetryConfig` here
...
11 |     BackoffSchedule, GrpcRetryConfig, GrpcRetryConfigBuilder, ResourceExhaustedContext,
   |                      ^^^^^^^^^^^^^^^--
   |                      |
   |                      `GrpcRetryConfig` reimported here
   |                      help: remove unnecessary import
   |
   = note: `GrpcRetryConfig` must be defined only once in the type namespace of this module

error[E0252]: the name `GrpcBreakerClient` is defined multiple times
 --> breaker\main\src\saf\breaker_svc.rs:9:29
  |
7 | use crate::api::types::GrpcBreakerClient;
  |     ------------------------------------ previous import of the type `GrpcBreakerClient` here
8 |
9 | pub use crate::api::types::{GrpcBreakerClient, GrpcBreakerSvc};
  |                             ^^^^^^^^^^^^^^^^^--
  |                             |
  |                             `GrpcBreakerClient` reimported here
  |                             help: remove unnecessary import
  |
  = note: `GrpcBreakerClient` must be defined only once in the type namespace of this module

error[E0252]: the name `GrpcBreakerSvc` is defined multiple times
 --> breaker\main\src\saf\breaker_svc.rs:9:48
  |
6 | use crate::api::types::grpc_breaker_svc::GrpcBreakerSvc;
  |     --------------------------------------------------- previous import of the type `GrpcBreakerSvc` here
...
9 | pub use crate::api::types::{GrpcBreakerClient, GrpcBreakerSvc};
  |                                                ^^^^^^^^^^^^^^ `GrpcBreakerSvc` reimported here
  |
  = note: `GrpcBreakerSvc` must be defined only once in the type namespace of this module

error[E0252]: the name `GrpcBreakerConfig` is defined multiple times
  --> breaker\main\src\saf\breaker_svc.rs:11:43
   |
 5 | use crate::api::types::grpc_breaker_config::GrpcBreakerConfig;
   |     --------------------------------------------------------- previous import of the type `GrpcBreakerConfig` here
...
11 | pub use crate::api::types::{BreakerState, GrpcBreakerConfig};
   |                                           ^^^^^^^^^^^^^^^^^ `GrpcBreakerConfig` reimported here
   |
   = note: `GrpcBreakerConfig` must be defined only once in the type namespace of this module

warning: unused import: `GrpcRetryConfig`
  --> retry\main\src\saf\retry_svc.rs:11:22
   |
11 |     BackoffSchedule, GrpcRetryConfig, GrpcRetryConfigBuilder, ResourceExhaustedContext,
   |                      ^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `GrpcRetryClient` and `GrpcRetrySvc`
  --> retry\main\src\saf\retry_svc.rs:14:29
   |
14 | pub use crate::api::types::{GrpcRetryClient, GrpcRetrySvc};
   |                             ^^^^^^^^^^^^^^^  ^^^^^^^^^^^^

warning: unused import: `validator::Validator`
 --> breaker\main\src\api\traits\mod.rs:9:9
  |
9 | pub use validator::Validator;
  |         ^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `GrpcBreakerClient` and `GrpcBreakerSvc`
 --> breaker\main\src\saf\breaker_svc.rs:9:29
  |
9 | pub use crate::api::types::{GrpcBreakerClient, GrpcBreakerSvc};
  |                             ^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^

warning: unused import: `GrpcBreakerConfig`
  --> breaker\main\src\saf\breaker_svc.rs:11:43
   |
11 | pub use crate::api::types::{BreakerState, GrpcBreakerConfig};
   |                                           ^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0252`.
warning: `swe-edge-egress-grpc-breaker` (lib) generated 3 warnings
error: could not compile `swe-edge-egress-grpc-breaker` (lib) due to 3 previous errors; 3 warnings emitted
warning: build failed, waiting for other jobs to finish...
warning: `swe-edge-egress-grpc-retry` (lib) generated 2 warnings
error: could not compile `swe-edge-egress-grpc-retry` (lib) due to 3 previous errors; 2 warnings emitted
